--- a/src/shared/uiKit/tooltip/tooltip.module.scss
+++ b/src/shared/uiKit/tooltip/tooltip.module.scss
@@ -1,4 +1,5 @@
 @use '../variables' as *;
+@use '../remUtils' as *;
 
 .wrapper {
   position: relative;
@@ -12,11 +13,11 @@
 .tooltip {
   position: absolute;
   z-index: 1100;
-  padding: 0.375rem 0.75rem;
-  font-size: 0.8125rem;
+  padding: p(6, 12);
+  font-size: rem(13);
   color: #fff;
   background-color: $color-text;
-  border-radius: 4px;
+  border-radius: br(4);
   white-space: nowrap;
   opacity: 0;
   visibility: hidden;
@@ -33,43 +34,43 @@
 .top {
   bottom: 100%;
   left: 50%;
-  transform: translate(-50%, -0.5rem);
+  transform: translate(-50%, rem(-8));
 
   .wrapper:hover &,
   .wrapper:focus-within & {
-    transform: translate(-50%, -0.5rem);
+    transform: translate(-50%, rem(-8));
   }
 }
 
 .bottom {
   top: 100%;
   left: 50%;
-  transform: translate(-50%, 0.5rem);
+  transform: translate(-50%, rem(8));
 
   .wrapper:hover &,
   .wrapper:focus-within & {
-    transform: translate(-50%, 0.5rem);
+    transform: translate(-50%, rem(8));
   }
 }
 
 .left {
   right: 100%;
   top: 50%;
-  transform: translate(-0.5rem, -50%);
+  transform: translate(rem(-8), -50%);
 
   .wrapper:hover &,
   .wrapper:focus-within & {
-    transform: translate(-0.5rem, -50%);
+    transform: translate(rem(-8), -50%);
   }
 }
 
 .right {
   left: 100%;
   top: 50%;
-  transform: translate(0.5rem, -50%);
+  transform: translate(rem(8), -50%);
 
   .wrapper:hover &,
   .wrapper:focus-within & {
-    transform: translate(0.5rem, -50%);
+    transform: translate(rem(8), -50%);
   }
 }
