--- a/src/modules/documents/documentListPage/documentListPage.module.scss
+++ b/src/modules/documents/documentListPage/documentListPage.module.scss
@@ -173,6 +173,15 @@
 .td {
   padding: p(12, 16);
   color: $color-text;
+
+  a {
+    color: $color-primary;
+    text-decoration: none;
+
+    &:hover {
+      text-decoration: underline;
+    }
+  }
 }
 
 .pagination {
