--- a/src/modules/documents/documentDetailPage/documentDetailPage.module.scss
+++ b/src/modules/documents/documentDetailPage/documentDetailPage.module.scss
@@ -61,6 +61,92 @@
   font-size: #{rem(14)};
 }
 
+.timeline {
+  position: relative;
+  padding-left: rem(24);
+}
+
+.timelineItem {
+  position: relative;
+  padding-bottom: rem(20);
+
+  &:last-child {
+    padding-bottom: 0;
+  }
+}
+
+.timelineDot {
+  position: absolute;
+  left: rem(-24);
+  top: rem(6);
+  width: rem(10);
+  height: rem(10);
+  border-radius: 50%;
+  background: $color-primary;
+}
+
+.timelineLine {
+  position: absolute;
+  left: rem(-19);
+  top: rem(16);
+  bottom: rem(-4);
+  width: 2px;
+  background: $color-border;
+}
+
+.timelineContent {
+  font-size: #{rem(14)};
+}
+
+.timelineVersion {
+  font-weight: 600;
+  color: $color-text;
+}
+
+.timelineLabel {
+  margin-left: rem(8);
+  color: $color-text-secondary;
+}
+
+.timelineMeta {
+  margin: rem(4) 0 0;
+  font-size: #{rem(13)};
+  color: $color-text-secondary;
+}
+
+.activityList {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+
+.activityItem {
+  padding: rem(12) 0;
+  border-bottom: 1px solid $color-border;
+  font-size: #{rem(14)};
+
+  &:last-child {
+    border-bottom: none;
+  }
+}
+
+.activityType {
+  font-weight: 600;
+  color: $color-text;
+}
+
+.activityMeta {
+  margin-left: rem(8);
+  font-size: #{rem(13)};
+  color: $color-text-secondary;
+}
+
+.activityDetail {
+  margin: rem(6) 0 0;
+  font-size: #{rem(13)};
+  color: $color-text-secondary;
+}
+
 .metadataList {
   margin: 0;
   padding: 0;
