feat: Analytics panel (Recharts, date filter, nav link)

--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -12,6 +12,12 @@
   background-color: $color-surface;
 }
 
+.nav {
+  display: flex;
+  align-items: center;
+  gap: rem(24);
+}
+
 .headerLink {
   font-weight: 600;
   color: $color-text;
